Add test JVM opens for Java 17